<resources>
    <string name="app_name">NotesApp</string>
    <string name="add_weather_and_location">Add Location</string>
    <string name="add_note">Save</string>
    <string name="add_photo">Add Photo</string>
    <string name="ingresar_comentario_nota">ingresar comentario nota</string>
    <string name="name_must_completed">El campo nombre no debe estar vacio</string>
    <string name="ingrese_titulo_de_la_nota">Ingrese titulo de la nota</string>
    <string name="escriba_un_comentario_de_la_nota">Escriba un comentario de la nota</string>
    <string name="comentario">Comentario</string>
    <string name="nombre_nota">Nombre nota</string>
    <string name="provincia">Provincia:</string>
    <string name="munucipio">Munucipio:</string>
    <string name="titulo_de_la_nota">Titulo de la nota</string>
    <string name="comentario_de_la_nota">Comentario de la nota</string>
    <string name="provinciaDetail">Provincia</string>
    <string name="municipiodetail">Municipio</string>
    <string name="creationAt">, hora: </string>
    <string name="commasSeparator">", "</string>
    <string name="item_location">Ubicacion: </string>
    <string name="ubicaion">Ubicaion:</string>
    <string name="permisosCamaraText">Se necesita permiso para lanzar la camara</string>
    <string name="error_update_throw">error al intentar actualizar la nota</string>
    <string name="error_getById_throw">al obtener la nota por id</string>
    <string name="error_getNotes_throw">error al obtener las notas</string>
    <string name="error_insert_throw">al insertar una nota</string>
    <string name="error_undodelete_throw">error al intentar revertir eliminar la nota</string>
    <string name="error_delete_throw">error al intentar eliminar la nota</string>
    <string name="ErrorTitleEmpty">El titulo no puede estar sin completar</string>
    <string name="noAccesWithOutPermissionCamara">No podes acceder sin permisos a la galeria</string>
    <string name="AllowPermissionToOpenCamara">Debes dar permisos para utilizar la camara</string>
</resources>