<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNoteActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddNote"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/add_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/AddImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/editText_comentario_nota"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="6dp"
        android:text="@string/add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/empty_image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="73dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        app:srcCompat="@drawable/ic_baseline_add_location_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddImagGallery"
        android:layout_width="319dp"
        android:layout_height="214dp"
        android:layout_above="@+id/buttonAddNote"
        android:layout_alignParentStart="true"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="170dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        app:srcCompat="@drawable/ic_add_photo_gallery" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddImagCamara"
        android:layout_width="319dp"
        android:layout_height="214dp"
        android:layout_above="@+id/buttonAddNote"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="170dp"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        app:srcCompat="@drawable/ic_add_camera_photo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_titulo_nota"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="2dp"
        android:hint="@string/ingrese_titulo_de_la_nota" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_provincia"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="140dp"
        android:hint="@string/provincia" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textView_municiapio"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="-12dp"
        android:layout_marginBottom="140dp"
        android:layout_toEndOf="@+id/textView_provincia"
        android:hint="@string/munucipio" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText_comentario_nota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_titulo_nota"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="-1dp"
        android:hint="@string/ingresar_comentario_nota" />

</RelativeLayout>